# paper

./: .gitignore  .mergify.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  VISION.md  deny.toml  justfile
.cargo/: config
.github/: ranger.yml
.github/workflows/: create_pr.yml  validate.yml
src/: app.rs  canvas.rs  control.rs  engine.rs  file.rs  io.rs  kyoo.rs  lib.rs  logging.rs  lsp.rs  main.rs  market.rs  mode.rs  num.rs  orient.rs  ptr.rs  rec.rs  storage.rs  translate.rs  ui.rs
src/app/: action.rs  edit.rs  filter.rs  logging.rs  lsp.rs  translate.rs
src/app/lsp/: utils.rs
src/engine/: add_to_sketch.rs  change_mode.rs  draw_sketch.rs  execute_command.rs  filter_signals.rs  mark_at.rs  quit.rs  reduce_noise.rs  scroll.rs  update_view.rs
src/file/: local.rs
src/io/: config.rs  fs.rs  logging.rs  lsp.rs  ui.rs
src/io/lsp/: utils.rs
src/io/ui/: error.rs
src/mode/: action.rs  command.rs  display.rs  edit.rs  filter.rs
src/ui/: base.rs
tests/: close.rs  command_mode.rs  display_mode.rs  filter_mode.rs  startup.rs
tests/mock/: mod.rs
