[package]
name = "paper"
version = "0.3.0"
authors = ["Justin Simerly <jsim2010@gmail.com>"]
description = "A terminal-based editor with goals to maximize simplicity and efficiency."
license = "MIT"
repository = "https://github.com/jsim2010/paper"
readme = "README.md"
keywords = ["editor", "mode", "filter"]
categories = ["command-line-utilities", "text-editors"]
edition = "2018"

[dependencies]
clap = "2.33.0"
crossterm = "0.17.6"
enum-map = "0.6.2"
fehler = "1.0.0"
home = "0.5.3"
jsonrpc-core = "14.0.5"
log = { version = "0.4.8", features = ["serde"] }
lsp-types = "0.77.0"
market = "0.14.0"
notify = "4.0.12"
parse-display = "0.1.1"
serde = "1.0.104"
serde_json = "1.0"
starship = "0.45.0"
structopt = "0.3.15"
thiserror = "1.0"
time = { version = "0.2.7", features = ["std"] }
toml = "0.5.5"
# Required because lsp-types does not provide access to url::ParseError.
url = "2.0.0"
