[package]
name = "paper"
version = "0.4.0"
authors = ["Justin Simerly <jsim2010@gmail.com>"]
description = "A terminal-based editor with goals to maximize simplicity and efficiency."
license = "MIT"
repository = "https://github.com/jsim2010/paper"
readme = "README.md"
keywords = ["editor", "mode", "filter"]
categories = ["command-line-utilities", "text-editors"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.0"
crossterm = "0.20.0"
docuglot = "0.7.0"
enum-map = "0.6.2"
fehler = "1.0.0"
log = { version = "0.4.8", features = ["serde"] }
lsp-types = "0.88.0"
market = "0.26.0"
parse-display = "0.5.0"
starship = "0.56.0"
structopt = "0.3.15"
thiserror = "1.0"
toml = "0.5.5"
# Required because lsp-types does not provide access to url::ParseError.
url = "2.0.0"
